fix: button on mobile

--- a/app/client/form-account.scss
+++ b/app/client/form-account.scss
@@ -38,6 +38,7 @@
       display: flex;
       align-items: center;
       margin-bottom: 5px;
+      z-index: 50;
   
       label {
         flex-grow: 1;
@@ -48,6 +49,7 @@
         flex-grow: 1;
         background-color: white;
         border-radius: $radius;
+        z-index: 51;
         border: 0;
         min-width: 250px;
         padding: 0 5px;
