--- a/app/client/reactions-toolbox.scss
+++ b/app/client/reactions-toolbox.scss
@@ -5,6 +5,7 @@
 
 .reactions-toolbox {
   position: fixed;
+  z-index: 50;
   left: 10px;
   top: 10px;
   padding: 5px;
@@ -13,13 +14,13 @@
   display: flex;
   flex-direction: column;
   color: #2E3440;
-  z-index: 2;
   opacity: 0;
   transition: opacity 0.15s;
 
   .buttons {
     display: flex;
     flex-direction: row;
+    z-index: 51;
 
     button {
       width: var(--emoji-button-size);
@@ -28,9 +29,11 @@
       justify-content: center;
       align-items: center;
       margin: 5px;
+      z-index: 52;
   
       div.emoji {
         pointer-events: none;
+        z-index: 53;
         font-size: var(--emoji-size);
         line-height: var(--emoji-size);
         width: var(--emoji-size);
